# air-quality-data-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: prediction.ipynb
