[tool.poetry]
name = "sensor-data-analysis"
version = "0.1.0"
description = ""
authors = ["Piotr Krzysztof Lis <piotrlis555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
async-httpd-data-collector = "^0.2"
streamlit = "^1.34.0"
jupyter = {version = "^1.0.0", optional = true}
jupyterlab-vim = {version = "^4.1.3", optional = true}
plotly = "^5.22.0"
chart-studio = "^1.1.0"
scipy = "^1.13.0"
statsmodels = "^0.14.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
kaleido = "0.2.1"
pandoc = "^2.3"
pmdarima = "^2.0.4"

[tool.poetry.extras]
jupyter = ["jupyter", "jupyter-vim"]

[project]
dependencies = [
  "async-httpd-data-collector",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
